--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "author": "Waseem Hathot",
   "license": "MIT License",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.5",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.4",
+    "@types/mongodb": "^3.3.5",
     "@types/node": "^12.6.3",
     "@types/passport": "^1.0.1",
     "@types/passport-jwt": "^3.0.2",
@@ -37,10 +40,13 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
